--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,6 @@ services:
     volumes:
       - ./user-service/db/init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./user-service/db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -d user_db"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
 
   post-db:
     image: postgres:13
@@ -33,16 +28,12 @@ services:
     volumes:
       - ./post-service/db/init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./post-service/db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -d post_db"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
 
   user-service:
     build: ./user-service
     ports:
       - "4001:4001"
+      - "50051:50051"
     environment:
       DB_HOST: user-db
       DB_PORT: 5432
@@ -51,13 +42,7 @@ services:
       DB_NAME: user_db
       GRPC_PORT: 50051
     depends_on:
-      user-db:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4001/"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - user-db
     networks:
       - monorepo-network
 
@@ -73,15 +58,8 @@ services:
       DB_NAME: post_db
       USER_SERVICE_URL: user-service:50051
     depends_on:
-      post-db:
-        condition: service_healthy
-      user-service:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4002/"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - post-db
+      - user-service
     networks:
       - monorepo-network
 
