--- a/post-service/package.json
+++ b/post-service/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@apollo/subgraph": "^2.9.3",
+    "@grpc/grpc-js": "^1.12.5",
+    "@grpc/proto-loader": "^0.7.13",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "pg": "^8.13.1"
